--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
   <footer>
     <nav>
     <ul style="list-style:none; padding:0; margin:0; font-size: 1rem;">
-      <li>📁 <a href="{{ '/indexes/categories/' | relative_url }}">Browse by Category</a></li>
+      <li>📁 <a href="{{ '/indexes/categories' | relative_url }}">Browse by Category</a></li>
       <li>🏷️ <a href="{{ '/indexes/proteins' | relative_url }}">Browse by Protein</a></li>
       <li>🔤 <a href="{{ '/indexes/alphabet' | relative_url }}">A–Z Index</a></li>
     </ul>
