--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,9 @@
       font-size: 0.9rem;
       color: #666;
     }
+    footer .credit {
+        margin-top: 1rem
+        font-size: 0.85rem;
     button.home-btn {
       background-color: #007acc;
       color: white;
@@ -94,6 +97,7 @@
       <li>🔤 <a href="{{ '/indexes/alphabet' | relative_url }}">A–Z Index</a></li>
     </ul>
   </nav>
+  <div class="signoff">Made with 🧡 by Tim &amp; Zoe</div>div>
   </footer>
 </body>
 </html>
