--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,7 +92,7 @@
       }
     
       a {
-        color: var(--color-primary); /* Mocha Brown */
+        color: #BFA68D; /* lighter Mocha Brown */
       }
     
       a:hover {
